--- a/views/Code.ejs
+++ b/views/Code.ejs
@@ -3,33 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WhatsApp QR Code</title>
-    <script src="/socket.io/socket.io.js"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', (event) => {
-            const socket = io();
-
-            socket.on('qrCodeEvent', (base64Screenshot) => {
-                console.log('image',base64Screenshot);
-                const qrCodeImage = document.getElementById('qrCodeImage');
-                qrCodeImage.src = `data:image/png;base64,${base64Screenshot}`;
-            });
-        });
-    </script>
+    <title>QR Code</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <script src="/socket.io/socket.io.js" defer></script>
+    <script src="/js/qrcodecient.js" defer></script>
 </head>
 
-<style>
-    .centre{
-        display: flex;
-        justify-content: center;
-    }
-    .sethw{
-        height: 264px;
-        width: 264px;
-    }
- </style>
 <body>
-    <h1>WhatsApp QR Code</h1>
-    <img id="qrCodeImage" src="" alt="WhatsApp QR Code" class="sethw">
+    <h1 id="msg"><%= msg %></h1>
+    <img id="qrCodeImage" src="data:image/png;base64,<%= qrcode %>" alt="WhatsApp QR Code" class="sethw">
 </body>
 </html>
